# trade-strats

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: config.example.yaml  paper-a.yaml  paper-b.yaml
config/tuning/: 10m-no-aapl.yaml  22-only.yaml  all-11.yaml  all-5.yaml  atr-0.0.yaml  atr-0.5.yaml  atr-0.75.yaml  atr-1.0.yaml  btc.yaml  conc-1.yaml  conc-10.yaml  conc-5.yaml  core4-plus-new.yaml  ftfc-1d-only.yaml  ftfc-1h-only.yaml  ftfc-full.yaml  ftfc-no-4h.yaml  ftfc-none.yaml  long-only.yaml  no-322-no-rev.yaml  no-322.yaml  no-aapl.yaml  nvda-tsla.yaml  risk-0.25pct.yaml  risk-1.0pct.yaml  rr-1.5.yaml  rr-2.0.yaml  rr-2.5.yaml  rr-coin-2.yaml  rr-coin-3.yaml  rr-coin-4.yaml  rr-coin-5.yaml  rr-coin-6.yaml  rr-mstr-2.yaml  rr-mstr-3.yaml  rr-mstr-4.yaml  rr-mstr-5.yaml  rr-mstr-6.yaml  rr-nvda-2.yaml  rr-nvda-3.yaml  (+32 more)
data/: schema.sql
docs/: architecture-flows.md
docs/prd/: draft.md
reports/: BACKLOG.md  PAPER_TRADING_LOG.md  PAPER_TRADING_PLAN.md  RESEARCH_LOG.md  TUNING_PLAN.md
reports/walk-forward/: 2019-04-16_to_2026-04-16_run-2026-04-16.json  2019-04-16_to_2026-04-16_run-2026-04-16.md  2019-04-16_to_2026-04-16_run-2026-04-16_22-312.json  2019-04-16_to_2026-04-16_run-2026-04-16_22-312.md  2019-04-16_to_2026-04-16_run-2026-04-16_22-only.json  2019-04-16_to_2026-04-16_run-2026-04-16_22-only.md  2019-04-16_to_2026-04-16_run-2026-04-16_atr-0.0.json  2019-04-16_to_2026-04-16_run-2026-04-16_atr-0.0.md  (+48 more)
scripts/: btc_backtest.py  compare_fills.py  fetch_bars.py  run_tuning.py  run_tuning_phase2.py  run_tuning_phase3.py  validate_results.py
src/trade_strats/: aggregation.py  (+14 more)
tests/: test_aggregation.py  test_backtest.py  test_compare_fills.py  test_config.py  test_execution.py  test_ftfc.py  test_journal.py  test_labeler.py  test_market_data.py  test_orchestrator.py  test_patterns.py  test_reconcile.py  test_reports.py  test_risk.py  test_scheduler.py  test_trade_updates.py  test_walk_forward.py
(+818 files in other folders)
